...
                    } label: {EmptyView()}
                        .buttonStyle(PlainButtonStyle())
                        .opacity(0.0)
                        .accessibilityIdentifier("NavigationLink" + String(movie.id ?? 0))
                    
                    VStack {
                        Text((movie.adult ?? false) ? "A" : "U/A")
                            .font(.headline)
                            .fontWeight(.heavy)
                            .foregroundStyle(Color.white)
                            .padding(EdgeInsets(top: 5.0, leading: 5.0, bottom: 5.0, trailing: 5.0))
                            .background(alignment: .topTrailing) {
                                Color.primary.opacity(0.7)
...
                    }
                }
            })
            .listRowSeparator(.hidden)
            .selectionDisabled()
        }
        .accessibilityIdentifier("movielist")
        .alert("Error", isPresented: $viewModel.shouldShowAlert, actions: {
            Button(action: {
                self.viewModel.shouldShowAlert = false
                self.viewModel.alertMessage = ""
            }, label: {
                Text("OK")
...
