...
                    .frame(maxWidth: .infinity, maxHeight: .infinity)
                    .ignoresSafeArea()
                    .background(Color.gray)
            }
            
            backButtonView
                .accessibilityIdentifier("moviedetailbackbutton")
            
            if self.viewModel.shouldShowLoader {
                ProgressView {
                    Text("Loading...")
                        .font(.headline)
                        .fontWeight(.semibold)
...
